# HomeCockpit

./: .gitignore  .gitmodules  AGENTS.md  HomeCockpit.bak  HomeCockpit.kicad_sym
Library.pretty/: AE-RP2040.kicad_mod  SW_PUSH-12mm-mini.kicad_mod
dcs-bios-rs/: Cargo.toml
dcs-bios-rs/src/: error.rs  import.rs  lib.rs  mem.rs  source.rs
firmware/hcp/: Cargo.toml  README.md
firmware/hcp/src/: lib.rs
firmware/homecockpit_firmware_base/: Cargo.toml  README.md
firmware/homecockpit_firmware_base/src/: lib.rs
firmware/upper_panel_ddi/: Cargo.toml
firmware/upper_panel_ddi/.cargo/: config.toml
firmware/upper_panel_ddi/src/: main.rs
imcp/: AGENTS.md  Cargo.toml
imcp/imcp-embassy/: Cargo.toml
imcp/imcp-embassy/src/: lib.rs
imcp/imcp-embedded/: Cargo.toml
imcp/imcp-embedded/src/: lib.rs
imcp/imcp-tokio/: Cargo.toml
imcp/imcp-tokio/src/: lib.rs
imcp/src/: channel.rs  error.rs  frame.rs  lib.rs  parser.rs
imcp/tests/: core_logic.rs
manager/: .gitignore  AGENTS.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json
manager/src-tauri/: Cargo.toml  tauri.conf.json
manager/src-tauri/src/: lib.rs  main.rs
manager/src/app/: globals.css  layout.tsx  page.tsx
manager/src/components/: device-detail.tsx
manager/src/components/software-connect/: software-connect-item.tsx
manager/src/components/tabs/: app-settings.tsx  device-settings.tsx  mapping-settings.tsx  software-settings.tsx  status-page.tsx
manager/src/lib/: control-catalog.ts  is-tauri.ts  manager-types.ts  use-manager-state.ts
upper_panel_ddi/: sym-lib-table  upper_panel_ddi.kicad_pcb  upper_panel_ddi.kicad_prl  upper_panel_ddi.kicad_pro  upper_panel_ddi.kicad_sch
upper_panel_ddi_button_panel/: upper_panel_ddi_button_panel.dxf  upper_panel_ddi_button_panel.kicad_pcb  upper_panel_ddi_button_panel.kicad_prl  upper_panel_ddi_button_panel.kicad_pro  upper_panel_ddi_button_panel.kicad_sch
upper_panel_ddi_case/: upper_panel_ddi_case.dxf
utils/: Cargo.toml
utils/imcp-cli/: Cargo.toml
utils/imcp-cli/src/: main.rs
