[package]
name = "hcp"
version = "0.1.0"
edition = "2024"
description = "HomeCockpit application protocol"

[dependencies]
defmt = { version = "1.0.1", optional = true }
heapless = { version = "0.9.1", features = ["serde"] }
postcard = { version = "1.1.3", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }

[features]
default = []
defmt = ["dep:defmt", "heapless/defmt"]

[lints.clippy]
unwrap_used = "forbid"
expect_used = "warn"
panic = "forbid"

large_stack_arrays = "forbid"

float_arithmetic = "forbid"
float_cmp = "forbid"
cast_possible_truncation = "forbid"
cast_sign_loss = "forbid"
cast_possible_wrap = "warn"
