[package]
name = "imcp-embassy"
version = "0.1.0"
edition = "2024"

[dependencies]
imcp = { path = "../" }
embassy-sync = { version = "0.7.2" }

[dev-dependencies]
embassy-sync = { version = "0.7.2", features = ["std"] }
embassy-executor = { version = "0.9.1", features = ["arch-std"] }
critical-section = { version = "1.1", features = ["std"] }
